# cimpl

./: .gitignore  CMakeLists.txt  compile_commands.json  test_messages.txt
examples/: main_serial.c  main_text.c
src/: cimpl.h  cimpl_core.c  cimpl_core.h  cimpl_glm.c  cimpl_glm.h  cimpl_impl.h  cimpl_network.c  cimpl_network.h  cimpl_serial.c  cimpl_serial.h  cimpl_string.c  cimpl_string.h  cimpl_types.h  main_serial.c  main_text.c
